--- a/.github/workflows/build-and-push-pds-azure.yaml
+++ b/.github/workflows/build-and-push-pds-azure.yaml
@@ -10,7 +10,7 @@ env:
   PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: pds
 
 jobs:
     pds-container-azure:
@@ -19,10 +19,11 @@ jobs:
             contents: read
             packages: write
             id-token: write
+            
         steps:
         # checkout the repo
         - name: 'Checkout GitHub Action'
-          uses: actions/checkout@main
+          uses: actions/checkout@v3
 
         - name: Setup Docker buildx
           uses: docker/setup-buildx-action@v1
@@ -31,6 +32,14 @@ jobs:
           uses: azure/login@v1
           with:
             creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+        - name: 'login to docker'
+          id: docker-login
+          uses: azure/docker-login@v1
+          with:
+            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+            username: ${{ secrets.REGISTRY_USERNAME }}
+            password: ${{ secrets.REGISTRY_PASSWORD }}
 
         - name: Extract Docker metadata
           id: meta
@@ -41,28 +50,14 @@ jobs:
             tags: |
               type=sha,enable=true,priority=100,prefix=pds:,suffix=,format=long
 
-
-        - name: 'login to docker'
-          id: docker-login
-          uses: azure/docker-login@v1
-          with:
-            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-            username: ${{ secrets.REGISTRY_USERNAME }}
-            password: ${{ secrets.REGISTRY_PASSWORD }}
-#        - run: |
-#            docker build -f ./packages/pds/Dockerfile . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-#            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-
         - name: Build and push Docker image
           id: build-and-push
           uses: docker/build-push-action@v4
           with:
             context: .
-#            push: ${{ github.event_name != 'pull_request' }}
             push: true
             file: ./packages/pds/Dockerfile
             tags: ${{ steps.meta.outputs.tags }}
-#            ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             labels: ${{ steps.meta.outputs.labels }}
             cache-from: type=gha
             cache-to: type=gha,mode=max
