--- a/.github/workflows/build-and-push-pds-azure.yaml
+++ b/.github/workflows/build-and-push-pds-azure.yaml
@@ -57,8 +57,11 @@ jobs:
             context: .
             push: true
             file: ./packages/pds/Dockerfile
-            tags: ${{ steps.meta.outputs.tags }}
+            tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
             labels: ${{ steps.meta.outputs.labels }}
+            build-args: |
+              version=${{ steps.tag.outputs.tag }}
+            
 #            cache-from: type=gha
 #            cache-to: type=gha,mode=max
 
