--- a/packages/azure/package.json
+++ b/packages/azure/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@atproto/crypto": "*",
     "@azure/identity": "^3.1.4",
+    "@azure/storage-blob": "^12.14.0",
     "@noble/secp256k1": "^1.7.0",
     "dotenv": "^16.0.3",
     "key-encoder": "^2.0.3",
