Copying calls from AWS to Azure (config needed)

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     ]
   },
   "dependencies": {
+    "@azure/keyvault-keys": "^4.7.0",
+    "@azure/keyvault-secrets": "^4.7.0",
     "npmcli": "^1.2.2"
   }
 }
