Complete - staging for first cloud test

--- a/packages/azure/tsconfig.json
+++ b/packages/azure/tsconfig.json
@@ -4,5 +4,6 @@
     "outDir": "./dist", // Your outDir,
     "emitDeclarationOnly": true
   },
+  "types":["node"],
   "include": ["./src","__tests__/**/**.ts"]
 }
