--- a/packages/azure/package.json
+++ b/packages/azure/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@atproto/crypto": "*",
     "@azure/identity": "^3.1.4",
+    "@azure/keyvault-secrets": "^4.7.0",
     "@azure/storage-blob": "^12.14.0",
-    "@noble/secp256k1": "^1.7.0",
+    "@noble/hashes": "^1.3.0",
+    "@noble/secp256k1": "^2.0.0",
     "dotenv": "^16.0.3",
     "key-encoder": "^2.0.3",
     "uuid": "^9.0.0"
