--- a/plc-server/package.json
+++ b/plc-server/package.json
@@ -6,16 +6,21 @@
   "bin": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "node ./build.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@did-plc/lib": "^0.0.1",
     "@did-plc/server": "^0.0.1",
+    "@noble/hashes": "^1.3.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
