--- a/packages/bsky/Dockerfile
+++ b/packages/bsky/Dockerfile
@@ -17,6 +17,7 @@ COPY ./packages/nsid ./packages/nsid
 COPY ./packages/repo ./packages/repo
 COPY ./packages/uri ./packages/uri
 COPY ./packages/xrpc ./packages/xrpc
+COPY ./packages/lex-cli ./packages/lex-cli
 COPY ./packages/xrpc-server ./packages/xrpc-server
 RUN ATP_BUILD_SHALLOW=true yarn install --frozen-lockfile > /dev/null
 RUN yarn workspaces run build --update-main-to-dist > /dev/null
